--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,9 +1,10 @@
 source 'https://github.com/CocoaPods/Specs.git'
 use_frameworks!
 
-
 target 'CrashlyticsRecorder_Tests', :exclusive => true do
   pod 'CrashlyticsRecorder', :path => '../'
 
-  
+  pod 'Fabric'
+  pod 'Crashlytics'
+
 end
