--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,7 +1,7 @@
 source 'https://github.com/CocoaPods/Specs.git'
 use_frameworks!
 
-target 'CrashlyticsRecorder_Tests', :exclusive => true do
+target 'CrashlyticsRecorder_Tests' do
   pod 'CrashlyticsRecorder', :path => '../'
 
   pod 'Fabric'
