Add support for Firebase Analytics
- Add new `AnalyticsRecorder` for FirebaseAnalytics
- Add subspecs to Podspec to allow user to choose which recorders to include

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -3,8 +3,11 @@ source 'https://github.com/CocoaPods/Specs.git'
 use_frameworks!
 
 target 'CrashlyticsRecorder_Tests' do
-  pod 'CrashlyticsRecorder', :path => '../'
+  pod 'CrashlyticsRecorder/Crashlytics', :path => '../'
+  pod 'CrashlyticsRecorder/Answers', :path => '../'
+  pod 'CrashlyticsRecorder/FirebaseAnalytics', :path => '../'
 
+  pod 'Firebase/Core'
   pod 'Fabric'
   pod 'Crashlytics'
 
