--- a/Example/CrashlyticsRecorder.xcodeproj/xcshareddata/xcschemes/CrashlyticsRecorder-Example.xcscheme
+++ b/Example/CrashlyticsRecorder.xcodeproj/xcshareddata/xcschemes/CrashlyticsRecorder-Example.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-               BuildableName = "CrashlyticsRecorder_Example.app"
-               BlueprintName = "CrashlyticsRecorder_Example"
-               ReferencedContainer = "container:CrashlyticsRecorder.xcodeproj">
+               BlueprintIdentifier = "A9B96F037593ECDF849B317BBD16787A"
+               BuildableName = "CrashlyticsRecorder.framework"
+               BlueprintName = "CrashlyticsRecorder"
+               ReferencedContainer = "container:Pods/Pods.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -75,18 +75,12 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-            BuildableName = "CrashlyticsRecorder_Example.app"
-            BlueprintName = "CrashlyticsRecorder_Example"
-            ReferencedContainer = "container:CrashlyticsRecorder.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
       <AdditionalOptions>
       </AdditionalOptions>
+      <LocationScenarioReference
+         identifier = "com.apple.dt.IDEFoundation.CurrentLocationScenarioIdentifier"
+         referenceType = "1">
+      </LocationScenarioReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
